# russian-cube

./: CMakeLists.txt  ru_cube.cxx
include/: Board.h  Game.h  Piece.h  Pixel.h
src/: Board.cxx  Game.cxx  Piece.cxx  Pixel.cxx
